--- a/angular.json
+++ b/angular.json
@@ -52,13 +52,7 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all",
-              "fileReplacements": [
-                {
-                    "replace": "src/environment/environment.ts",
-                    "with": "src/environment/environment.prod.ts"
-                }
-              ]
+              "outputHashing": "all"
             },
             "development": {
               "buildOptimizer": false,
